crates/laplace-macro/tests/ui/fail/verify_tasks_no_args.rs
// SPDX-License-Identifier: Apache-2.0

#[laplace_macro::laplace_verify(tasks)]
fn composition_without_argument() {}

fn main() {}
